--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,9 @@ code {
 .hoverable:hover,
 .hoverable:active,
 .hoverable:focus {
+  color: #fff;
   transform: translateY(-5px);
+  text-decoration: none;
 }
 .hoverable:hover:before,
 .hoverable:active:before,
@@ -122,6 +124,7 @@ nav {
     margin-left: 3em;
     margin-right: 3em;
     a {
+      color: #9d9d9d;
       transition: 0.5s color ease-in-out;
     }
   }
